# home-auto

./: .env.example  .gitignore  CLAUDE.md  README.md  devices.json  pyproject.toml  test_hon.py
.claude/guardrails/: GUARDRAILS.md  dos.md
.claude/memory/: project.md
.github/workflows/: deploy.yml
app/: db.py  main.py  templating.py
app/api/: alerts.py  automations.py  devices.py  groups.py  history.py  network.py
app/devices/: firetv.py  hon.py  models.py  mqtt.py  tuya.py  zigbee_color.py
app/services/: automation_engine.py  automations.py  device_commands.py  groups.py  red_alert.py  scheduler.py  tuya_poller.py  weather.py
app/static/: manifest.json
app/templates/: add_device.html  automations.html  base.html  climate_chart.html  device_settings.html  groups.html  history.html  hon_discover.html  import_devices.html  index.html  network.html  power_chart.html  z2m_discover.html
app/templates/partials/: automation_form.html  automation_row.html  device_card.html  device_grid.html  device_name.html  device_schedule.html  group_card.html  history_rows.html  network_devices.html  red_alert_btn.html  rename_form.html
deploy/: home-auto.service  nginx-home-auto  setup.sh  z2m-configuration.yaml  zigbee2mqtt.service
scripts/: generate_icons.py
tests/: conftest.py  test_api.py  test_automations.py  test_firetv.py  test_groups.py  test_mqtt.py  test_network.py  test_red_alert.py  test_tuya_utils.py  test_zigbee_color.py
